--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,6 @@ body {
 	background-color: blue;
 	font-family: "Comic Sans MS", cursive, sans-serif;
 	font-size: 100%;
-
 }
 
 header {
@@ -26,22 +25,33 @@ div.gamerules {
 	background-color: yellow;
 }
 
-div.startandstop  {}
-
-.button {
-	align-self: 
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-	background-color: white;
+div.startandstop  {
+	width: 90%;
+	margin: 0 auto 0 auto;
+	text-align: center;
 }
-
+	
 div.questions {
+	width: 90%;
+	margin: 0 auto 0 auto;
 	font-size: 2.0em;
 	text-align: center;
 	background-color: orange;
+
+}
+
+article {
+	width: 90%;
+	margin: 0 auto 0 auto;
+	font-size: 2.0em;
+	text-align: center;
+	background-color: light-green;
+}
+
+div.answer {
+	width: 90%;
+	margin: 0 auto 0 auto;
+	font-size: 2.0em;
+	text-align: center;
+	background-color: pink;
 }
